--- a/src/app/security/sign-up/cadastro-senha/cadastro-senha.component.html
+++ b/src/app/security/sign-up/cadastro-senha/cadastro-senha.component.html
@@ -1,16 +1,16 @@
 <div class="container-header-login">
-  <h3 class="text-header3">
-      <strong>Crie uma senha!</strong>
-  </h3>
+    <h3 class="text-header3">
+        <strong>Crie uma senha!</strong>
+    </h3>
 </div>
 <div class="container-cadastro">
-  <form class="senhaForm" [formGroup]="cadastroSenhaForm" role="form" autocomplete="off" id="loginForm" novalidate="" method="POST">
-      <div class="form-group">
-          <input type="password" formControlName="senha" name="senha" placeholder="Senha" class="form-input" id="senha" autocomplete="new-password">
-      </div>
-      <div class="form-group">
-          <input type="password" formControlName="confirmacaoSenha" name="confirmacaoSenha" placeholder="Confirmar senha" class="form-input" id="confirmacaoSenha" autocomplete="new-password">
-      </div>
-      <button type="submit" class="btn-principal" id="btnLogin" (click)="efetuarCadastroSenha()">Próximo</button>
-  </form>
+    <form class="senhaForm" [formGroup]="cadastroSenhaForm" role="form" autocomplete="off" id="loginForm" novalidate="" method="POST">
+        <app-input-container class="form-group" errorMessage="O campo senha deve conter de 4 a 8 caracteres.">
+            <input type="password" formControlName="senha" name="senha" placeholder="Senha" class="form-input" id="senha" autocomplete="new-password">
+        </app-input-container>
+        <app-input-container class="form-group" errorMessage="O campo e-mail obrigatório.">
+            <input type="password" formControlName="confirmacaoSenha" name="confirmacaoSenha" placeholder="Confirmar senha" class="form-input" id="confirmacaoSenha" autocomplete="new-password">
+        </app-input-container>
+        <button type="submit" class="btn-principal" id="btnLogin" (click)="efetuarCadastroSenha()">Próximo</button>
+    </form>
 </div>
